fixed issue with background image bleeding through settings

--- a/wwwroot/css/settings.scss
+++ b/wwwroot/css/settings.scss
@@ -364,7 +364,6 @@ a.subpage{
     display:flex;
     flex-direction: row;
     width:100%;
-    height: 100%;
     background:var(--base);
 }
 
@@ -391,6 +390,7 @@ a.subpage{
         }
     }
     .version-info {
+        padding-top:1rem;
         height: 3rem;
         text-align: center;
         color: rgba(var(--color-rgb),.4);
